# libglenda-rs

./: .gitignore  Cargo.toml  build.sh  linker.ld
src/: allocator.rs  bootinfo.rs  caps.rs  console.rs  crt0.rs  elf.rs  error.rs  factotum.rs  initrd.rs  lib.rs  log.rs  manifest.rs  mem.rs  runtime.rs  syscall.rs  types.rs  utcb.rs
src/arch/: api.rs  interface.rs  mod.rs  riscv64.rs  x86_64.rs
src/arch/api/: linker.ld  mem.rs  mod.rs  runtime.rs  syscall.rs
src/arch/riscv64/: linker.ld  mem.rs  mod.rs  runtime.rs  syscall.rs
src/arch/x86_64/: linker.ld  mem.rs  mod.rs  runtime.rs  syscall.rs
src/cap/: cnode.rs  console.rs  endpoint.rs  frame.rs  irq.rs  kernel.rs  method.rs  mod.rs  pagetable.rs  reply.rs  tcb.rs  untyped.rs  vspace.rs
src/console/: kconsole.rs  mod.rs
src/heap/: dynamic.rs  fixed.rs  mod.rs
src/ipc/: mod.rs  utcb.rs
src/posix/: mod.rs  syscall.rs
src/protocol/: device.rs  factotum.rs  init.rs  mod.rs  process.rs  unicorn.rs
src/runtime/: mod.rs
src/runtime/bare/: bootinfo.rs  mod.rs
src/runtime/service/: mod.rs  platform.rs
