[package]
name = "libglenda-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "glenda"
crate-type = ["staticlib", "rlib"]

[dependencies]
buddy_system_allocator = "0.9"
spin = "0.9"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bitflags = "2.10.0"
